@@ -3,6 +3,7 @@ require 'xmlrpc/datetime'
 require "xmlrpc/parser"
 require 'yaml'
 
+module TestXMLRPC
 module GenericParserTest
   def datafile(base)
     File.join(File.dirname(__FILE__), "data", base)
@@ -88,4 +89,5 @@ XMLRPC::XMLParser.each_installed_parser do |parser|
       end
     end
   }
+end
 end
