@@ -7,6 +7,7 @@ require "xmlrpc/server"
 require 'xmlrpc/client'
 require 'logger'
 
+module TestXMLRPC
 class Test_Webrick < Test::Unit::TestCase
   include WEBrick_Testing
 
@@ -131,4 +132,5 @@ class Test_Webrick < Test::Unit::TestCase
     # multibyte characters
     assert_equal "あいうえおかきくけこ", @s.call('test.add', "あいうえお", "かきくけこ")
   end
+end
 end
